[package]
name = "sentry-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["derive"] }
fuser = "0.14"
futures = "0.3.30"
libc = "0.2.158"
reqwest = {version = "0.12.7", features = ["http2", "default-tls", "charset", "gzip", "json", "blocking"]}
serde = {version = "1.0.208", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
